--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <script>
 document.write("Hello")
 document.write("world")
+  <br>
+document.write("HI!")
+document.write("HI!!")
+document.write("HI!!!")
 
 </script>
 
